first webservice base

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+.idea
 pkg
 bin
 resources
 # binaries
+**/*.exe
 src/cmd/import_t/import_t
 src/cmd/import_wares/import_wares
+src/cmd/xrguide/xrguide
+# cfg
+src/cmd/xrguide/cfg/xrguide.cfg.json
 
